--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "classnames": "2.3.1",
+    "firebase": "9.4.0",
     "node-sass": "4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "3.14.3",
     "react-redux": "7.2.4",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
     "web-vitals": "1.0.1"
   },
   "scripts": {
